[refactor]: Alterando formatação
