# src/lib/swagger_output.json
@@ -7,12 +7,12 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8080/",
-      "description": "Local"
-    },
-    {
       "url": "https://api-books.fly.dev/",
       "description": "Produção"
+    },
+    {
+      "url": "http://localhost:8080/",
+      "description": "Local"
     }
   ],
   "tags": [
@@ -311,6 +311,42 @@
         }
       }
     },
+    "/api/v1/books/listByUser/": {
+      "get": {
+        "tags": [
+          "Book"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/PageQuery"
+          },
+          {
+            "$ref": "#/components/parameters/PageSizeQuery"
+          },
+          {
+            "$ref": "#/components/parameters/SearchQuery"
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BookResponse"
+                }
+              }
+            },
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/api/v1/books/patch/{id}": {
       "patch": {
         "tags": [
@@ -387,7 +423,7 @@
         ]
       }
     },
-    "/api/v1/books/categories": {
+    "/api/v1/books/categories/": {
       "get": {
         "tags": [
           "Book"
@@ -415,12 +451,7 @@
             },
             "description": "OK"
           }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ]
+        }
       }
     },
     "/api/v1/bookings/register": {
@@ -606,41 +637,44 @@
         }
       },
       "UserResponse": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string",
-            "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
+            },
+            "username": {
+              "type": "string",
+              "example": "username"
+            },
+            "name": {
+              "type": "string",
+              "example": "name"
+            },
+            "email": {
+              "type": "string",
+              "example": "email@email.com"
+            },
+            "createdAt": {
+              "type": "string",
+              "example": "year-mouth-day"
+            },
+            "updatedAt": {
+              "type": "string",
+              "example": "year-mouth-day"
+            }
           },
-          "username": {
-            "type": "string",
-            "example": "username"
-          },
-          "name": {
-            "type": "string",
-            "example": "name"
-          },
-          "email": {
-            "type": "string",
-            "example": "email@email.com"
-          },
-          "createdAt": {
-            "type": "string",
-            "example": "year-mouth-day"
-          },
-          "updatedAt": {
-            "type": "string",
-            "example": "year-mouth-day"
-          }
-        },
-        "required": [
-          "id",
-          "username",
-          "name",
-          "email",
-          "createdAt",
-          "updatedAt"
-        ]
+          "required": [
+            "id",
+            "username",
+            "name",
+            "email",
+            "createdAt",
+            "updatedAt"
+          ]
+        }
       },
       "BookRegister": {
         "type": "object",
@@ -718,61 +752,69 @@
         }
       },
       "BookResponse": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string",
-            "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
+            },
+            "title": {
+              "type": "string",
+              "example": "title"
+            },
+            "cod": {
+              "type": "string",
+              "example": "cod"
+            },
+            "editora": {
+              "type": "string",
+              "example": "editora"
+            },
+            "autor": {
+              "type": "string",
+              "example": "autor"
+            },
+            "sinopse": {
+              "type": "string",
+              "example": "sinopse"
+            },
+            "bookCategoryId": {
+              "type": "string",
+              "example": "729c1ed8-93bf-4e1a-9d48-d4dec11e57e7"
+            },
+            "qtd": {
+              "type": "number",
+              "example": 1
+            },
+            "idUser": {
+              "type": "string",
+              "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
+            },
+            "createdAt": {
+              "type": "string",
+              "example": "year-mouth-day"
+            },
+            "updatedAt": {
+              "type": "string",
+              "example": "year-mouth-day"
+            }
           },
-          "title": {
-            "type": "string",
-            "example": "title"
-          },
-          "cod": {
-            "type": "string",
-            "example": "cod"
-          },
-          "editora": {
-            "type": "string",
-            "example": "editora"
-          },
-          "autor": {
-            "type": "string",
-            "example": "autor"
-          },
-          "sinopse": {
-            "type": "string",
-            "example": "sinopse"
-          },
-          "bookCategoryId": {
-            "type": "string",
-            "example": "729c1ed8-93bf-4e1a-9d48-d4dec11e57e7"
-          },
-          "qtd": {
-            "type": "number",
-            "example": 1
-          },
-          "createdAt": {
-            "type": "string",
-            "example": "year-mouth-day"
-          },
-          "updatedAt": {
-            "type": "string",
-            "example": "year-mouth-day"
-          }
-        },
-        "required": [
-          "id",
-          "title",
-          "cod",
-          "editora",
-          "autor",
-          "sinopse",
-          "bookCategoryId",
-          "qtd",
-          "createdAt",
-          "updatedAt"
-        ]
+          "required": [
+            "id",
+            "title",
+            "cod",
+            "editora",
+            "autor",
+            "sinopse",
+            "bookCategoryId",
+            "qtd",
+            "idUser",
+            "createdAt",
+            "updatedAt"
+          ]
+        }
       },
       "BookCategoryResponse": {
         "type": "array",
@@ -817,36 +859,39 @@
         ]
       },
       "BookingResponse": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string",
-            "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
+            },
+            "idUser": {
+              "type": "string",
+              "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
+            },
+            "bookId": {
+              "type": "string",
+              "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
+            },
+            "createdAt": {
+              "type": "string",
+              "example": "year-mouth-day"
+            },
+            "updatedAt": {
+              "type": "string",
+              "example": "year-mouth-day"
+            }
           },
-          "userId": {
-            "type": "string",
-            "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
-          },
-          "bookId": {
-            "type": "string",
-            "example": "a0fbbdeb-fee6-4e58-bec7-8ef84e55a892"
-          },
-          "createdAt": {
-            "type": "string",
-            "example": "year-mouth-day"
-          },
-          "updatedAt": {
-            "type": "string",
-            "example": "year-mouth-day"
-          }
-        },
-        "required": [
-          "id",
-          "userId",
-          "bookId",
-          "createdAt",
-          "updatedAt"
-        ]
+          "required": [
+            "id",
+            "idUser",
+            "bookId",
+            "createdAt",
+            "updatedAt"
+          ]
+        }
       }
     },
     "parameters": {
